<resources>
    <string name="app_name">ApprovalShipment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Id</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This User Id  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ok">OK</string>
    <string name="error_server">Something went wrong, contact support.</string>
    <string name="sample_cement">Cement</string>
    <string name="sample_date">02-06-2018</string>
    <string name="sample_shipment_no">0006453A</string>
    <string name="sample_truck_no">TN 09 CH44535</string>
    <string name="dispatch_no">Dispatch No</string>
    <string name="something_went_wrong">Some thing went wrong, contact support.</string>
    <string name="login_failed">user name or password mismatch.</string>
    <string name="dispatched_items">Dispatched Items</string>
    <string name="arrival_validation">Arrival Validation</string>
    <string name="sample_customer_name">SREE JAYAJOTHI CEMENTS PRIVATE LTD, ERODE</string>
    <string name="customer_name">Customer Name</string>
    <string name="product_name">Product Name</string>
    <string name="sample_grade_name">PSC CEMENT PP</string>
    <string name="grade_name">Grade Name</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="truck_no">Truck No</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="total">Total</string>
    <string name="sample_qty">35.000</string>
    <string name="sample_rate">1554.00</string>
    <string name="sample_total">31000.55</string>
    <string name="clotted_quantity">Clotted Quantity (In Bags)</string>
    <string name="clotted_details">Clotted Details</string>
    <string name="reason">Reason</string>
    <string name="damaged_details">Damaged Details</string>
    <string name="damaged_quantity">Damaged Quantity (In Bags)</string>
    <string name="damaged_reason">Damaged Reason</string>
    <string name="clotted_reason">Clotted Reason</string>
    <string name="arrived">Arrived</string>
    <string name="good_quantity">Final Good Quantity</string>
    <string name="clotted_reason_error">Clotted Reason can\'t be empty.</string>
    <string name="damaged_reason_error">Damaged Reason can\'t be empty.</string>
    <string name="internet_not_available">Check you internet connection.</string>
    <string name="search_truck">Search Truck</string>
    <string name="shipment_submitted">Shipment Submitted Successfully</string>
    <string name="arrived_date">Arrived Date (Tap to Edit)</string>
    <string name="diversion_details">Diversion Details</string>
    <string name="company">Company Diversion Quantity</string>
    <string name="own">Own Diversion Quantity</string>
    <string name="good_qty_neg">Good quantity cannot be negative.</string>
    <string name="search_grade_name">Search Grade Name</string>
    <string name="search_hint">Type grade name…</string>
    <string name="toolbar_title">Grades</string>
    <string name="list_of_grades">List of Grades</string>
    <string name="sales_date">Sales Date (Tap to Edit)</string>
    <string name="total_items">Total Items</string>
    <string name="submit_sales">Confirm</string>
    <string name="list_of_items">List of Items</string>
    <string name="selling_quantity">Selling Quantity</string>
    <string name="damaged">Damaged,</string>
    <string name="clotted">Clotted</string>
    <string name="from_date">From Date (Tap to Edit)</string>
    <string name="to_date">To Date (Tap to Edit)</string>
    <string name="no_data_found">No Data Found</string>
    <string name="stock_report">Stock Report</string>
    <string name="opening_quantity">Opening Quantity</string>
    <string name="purchased_qty">Purchased Qty</string>
    <string name="sold_quantity">Sales Quantity</string>
    <string name="in_stock">Closing Stock</string>
    <string name="dispatched_vehicle">Vehicle Count</string>
    <string name="dispatched_quantity">Quantity</string>
    <string name="transit">Transit</string>
</resources>
