<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_padding"
    android:background="@drawable/list_item_background"
    android:clickable="true"
    android:elevation="3dp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"

    android:orientation="vertical"
    android:padding="@dimen/list_item_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ship_li_truck_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"

            android:layout_weight="1"
            android:fontFamily="@font/muli"
            android:gravity="right"
            android:text="@string/sample_truck_no"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ship_li_dc_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/sample_shipment_no"
            android:textColor="@color/gray" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:layout_marginTop="@dimen/list_item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ship_li_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/sample_cement" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="dispatched on" />

        <TextView
            android:id="@+id/ship_li_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/sample_date" />

    </LinearLayout>

</LinearLayout>